--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-if": "1.2.5",
     "gulp-notify": "~2.2.0",
     "gulp-rename": "1.2.0",
+    "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-streamify": "0.0.4",
     "gulp-uglify": "~1.1.0",
