Fix Tooltip issue (using unnecessary ref)

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-validation",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "ReactJs validation component",
   "main": "./lib/js/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "classnames": "^2.2.0",
     "font-awesome": "^4.6.3",
     "lodash": "^4.5.1",
-    "react": "^0.14.8",
+    "react": "0.14.8",
     "react-commons": "git://github.com/saintpaul/react-commons",
     "react-dom": "^0.14.8",
     "react-tooltip": "3.2.1",
