--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-validation",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "ReactJs validation component",
   "main": "./lib/js/index.js",
   "scripts": {
@@ -26,8 +26,8 @@
     "reflux": "^0.3.0"
   },
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-cli": "^6.3.13",
+    "babel": "6.3.13",
+    "babel-cli": "6.3.13",
     "babel-eslint": "6.1.0",
     "babel-plugin-transform-class-properties": "6.3.13",
     "babel-preset-es2015": "6.3.13",
