--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-validation",
-  "version": "2.4.2",
+  "version": "3.0.0",
   "description": "ReactJs validation component",
   "main": "./lib/js/index.js",
   "scripts": {
@@ -19,12 +19,15 @@
   "dependencies": {
     "async-validate": "0.13.1",
     "classnames": "^2.2.0",
-    "lodash": "^4.5.1",
-    "react": "0.14.8",
-    "react-commons": "git://github.com/saintpaul/react-commons",
-    "react-dom": "0.14.8",
-    "react-tooltip": "3.2.1",
-    "reflux": "^0.3.0"
+    "react-tooltip": "3.2.1"
+  },
+  "peerDependencies": {
+    "react": "0.14.x || 15.x",
+    "react-dom": "0.14.x || 15.x",
+    "react-commons": "git://github.com/saintpaul/react-commons#v2",
+    "reflux": "0.4.x",
+    "lodash": "4.x",
+    "react-select": ">=1.0.0-rc.1"
   },
   "devDependencies": {
     "babel": "^6.3.13",
@@ -36,7 +39,9 @@
     "babelify": "7.2.0",
     "browserify": "12.0.1",
     "del": "~0.1.3",
+    "eslint-config-airbnb-base": "^11.0.0",
     "eslint-friendly-formatter": "^2.0.5",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^5.2.2",
     "gulp": "~3.9.1",
     "gulp-concat": "~2.3.4",
@@ -53,11 +58,17 @@
     "gulp-streamify": "0.0.4",
     "gulp-uglify": "~1.1.0",
     "gulp-util": "~3.0.0",
-    "moment": "2.9.0",
-    "react-select": "1.0.0-beta8",
+    "lodash": "4.x",
+    "moment": "2.x",
+    "react": "15.x",
+    "react-commons": "git://github.com/saintpaul/react-commons#v2",
+    "react-dom": "15.x",
+    "react-select": ">=1.0.0-rc.2",
+    "reflux": "0.4.x",
     "run-sequence": "~0.3.5",
     "vinyl-source-stream": "~0.1.1",
-    "watchify": "~2.3.0"
+    "watchify": "~2.3.0",
+    "jquery": "2.x"
   },
   "eslintConfig": {
     "globals": {
