--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-validation",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "ReactJs validation component",
   "main": "./lib/js/index.js",
   "scripts": {
@@ -24,7 +24,7 @@
   "peerDependencies": {
     "react": "0.14.x || 15.x",
     "react-dom": "0.14.x || 15.x",
-    "react-commons": "git://github.com/saintpaul/react-commons#v2",
+    "react-commons": "git://github.com/saintpaul/react-commons",
     "reflux": "0.4.x",
     "lodash": "4.x"
   },
