--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react": "15.x",
     "react-commons": "git://github.com/saintpaul/react-commons",
     "react-dom": "15.x",
-    "react-select": ">=1.0.0-rc.2",
+    "react-select-wrapper": "https://github.com/saintpaul/react-select-wrapper#v1.3.0",
     "reflux": "0.4.x",
     "run-sequence": "~0.3.5",
     "vinyl-source-stream": "~0.1.1",
