--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ReactJs validation component",
   "main": "./lib/js/index.js",
   "scripts": {
+    "start": "gulp",
     "prebuild": "npm i",
     "build": "./build.sh",
     "prerelease": "./build.sh",
@@ -21,14 +22,15 @@
   "homepage": "https://github.com/saintpaul/react-validation#readme",
   "dependencies": {
     "async-validate": "0.13.1",
-    "classnames": "^2.2.0",
     "react-tooltip": "3.2.1"
   },
   "peerDependencies": {
-    "react": "0.14.x || 15.x",
-    "react-dom": "0.14.x || 15.x",
-    "react-commons": "git://github.com/saintpaul/react-commons",
-    "reflux": "0.4.x",
+    "classnames": "2.x",
+    "prop-types": "15.5.x",
+    "react": "15.x",
+    "react-dom": "15.x",
+    "reflux": "6.4.x",
+    "sp-react-commons": "3.0.0-rc.x || 3.x",
     "lodash": "4.x"
   },
   "devDependencies": {
@@ -40,6 +42,7 @@
     "babel-preset-react": "6.3.13",
     "babelify": "7.2.0",
     "browserify": "12.0.1",
+    "classnames": "^2.2.5",
     "del": "~0.1.3",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -62,12 +65,13 @@
     "gulp-util": "~3.0.0",
     "lodash": "4.x",
     "moment": "2.x",
+    "prop-types": "15.5.x",
     "react": "15.x",
-    "react-commons": "git://github.com/saintpaul/react-commons",
     "react-dom": "15.x",
     "react-select-wrapper": "https://github.com/saintpaul/react-select-wrapper#v1.3.0",
-    "reflux": "0.4.x",
+    "reflux": "6.4.x",
     "run-sequence": "~0.3.5",
+    "sp-react-commons": "3.0.0-rc.7",
     "vinyl-source-stream": "~0.1.1",
     "watchify": "~2.3.0",
     "jquery": "2.x"
