--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-validation",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "ReactJs validation component",
   "main": "./lib/js/index.js",
   "scripts": {
@@ -22,15 +22,15 @@
   "homepage": "https://github.com/saintpaul/react-validation#readme",
   "dependencies": {
     "async-validate": "0.13.1",
-    "react-tooltip": "3.2.1"
+    "react-tooltip": "3.6.1"
   },
   "peerDependencies": {
     "classnames": "2.x",
     "prop-types": "15.5.x",
-    "react": "15.x",
-    "react-dom": "15.x",
+    "react": "16.x",
+    "react-dom": "16.x",
     "reflux": "6.4.x",
-    "sp-react-commons": "3.0.0-rc.x || 3.x",
+    "sp-react-commons": "4.x",
     "lodash": "4.x"
   },
   "devDependencies": {
@@ -65,15 +65,14 @@
     "lodash": "4.x",
     "moment": "2.x",
     "prop-types": "15.5.x",
-    "react": "15.x",
-    "react-dom": "15.x",
+    "react": "16.x",
+    "react-dom": "16.x",
     "react-select-wrapper": "https://github.com/saintpaul/react-select-wrapper#v1.3.0",
     "reflux": "6.4.x",
     "run-sequence": "~0.3.5",
     "sp-react-commons": "3.0.0-rc.7",
     "vinyl-source-stream": "~0.1.1",
-    "watchify": "~2.3.0",
-    "jquery": "2.x"
+    "watchify": "~2.3.0"
   },
   "eslintConfig": {
     "globals": {
