--- a/package.json
+++ b/package.json
@@ -21,59 +21,59 @@
   },
   "homepage": "https://github.com/saintpaul/react-validation#readme",
   "dependencies": {
-    "async-validate": "0.13.1",
-    "react-tooltip": "3.6.1"
+    "async-validate": "1.0.1",
+    "react-tooltip": "3.10.0"
   },
   "peerDependencies": {
     "classnames": "2.x",
-    "prop-types": "15.5.x",
+    "prop-types": "15.7.x",
     "react": "16.x",
     "react-dom": "16.x",
     "reflux": "6.4.x",
-    "sp-react-commons": "4.x",
+    "sp-react-commons": "4.3.1",
     "lodash": "4.x"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.13",
-    "babel-eslint": "6.1.0",
-    "babel-plugin-transform-class-properties": "6.3.13",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
-    "babelify": "7.2.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babelify": "10.0.0",
     "browserify": "12.0.1",
     "classnames": "^2.2.5",
-    "del": "~0.1.3",
-    "eslint-config-airbnb-base": "^11.0.0",
-    "eslint-friendly-formatter": "^2.0.5",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^5.2.2",
-    "event-stream": "3.3.4",
-    "gulp": "~3.9.1",
-    "gulp-concat": "~2.3.4",
-    "gulp-connect": "2.2.0",
-    "gulp-eslint": "3.0.0",
-    "gulp-filter": "~1.0.0",
-    "gulp-flatten": "~0.0.2",
+    "del": "4.0.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-friendly-formatter": "4.0.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-react": "7.12.4",
+    "event-stream": "4.0.1",
+    "gulp": "4.0.0",
+    "gulp-concat": "2.6.1",
+    "gulp-connect": "5.7.0",
+    "gulp-eslint": "5.0.0",
+    "gulp-filter": "5.1.0",
+    "gulp-flatten": "0.4.0",
     "gulp-foreach": "*",
-    "gulp-if": "1.2.5",
-    "gulp-notify": "~2.2.0",
-    "gulp-rename": "1.2.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-streamify": "0.0.4",
-    "gulp-uglify": "~1.1.0",
-    "gulp-util": "~3.0.0",
+    "gulp-if": "2.0.2",
+    "gulp-notify": "3.2.0",
+    "gulp-rename": "1.4.0",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-streamify": "1.0.2",
+    "gulp-uglify": "3.0.2",
+    "gulp-util": "~3.0.8",
     "lodash": "4.x",
     "moment": "2.x",
-    "prop-types": "15.5.x",
+    "prop-types": "15.7.x",
     "react": "16.x",
     "react-dom": "16.x",
     "react-select-wrapper": "https://github.com/saintpaul/react-select-wrapper#v1.3.0",
     "reflux": "6.4.x",
-    "run-sequence": "~0.3.5",
-    "sp-react-commons": "3.0.0-rc.7",
-    "vinyl-source-stream": "~0.1.1",
-    "watchify": "~2.3.0"
+    "sp-react-commons": "4.3.1",
+    "vinyl-source-stream": "2.0.0",
+    "watchify": "3.11.1"
   },
   "eslintConfig": {
     "globals": {
@@ -86,11 +86,11 @@
   },
   "babel": {
     "presets": [
-      "es2015",
-      "react"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ],
     "plugins": [
-      "transform-class-properties"
+      "@babel/plugin-proposal-class-properties"
     ]
   }
 }
